# bootstrap-icons-api

./: .gitignore  LICENSE  README.md  pyproject.toml
bsicons/: __init__.py  __init__.pyi  __init__.pyx
